[package]
name = "bdk_redb"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_wallet = {version = "2.0.0", optional = true}
bdk_chain = {version = "0.23.0", features = ["serde"]}
ciborium = "0.2.2"
redb = "2.5.0"
serde = "1.0.219"
tempfile = "3.20.0"
thiserror = "2.0.12"

[features]
wallet = ["bdk_wallet"]
